--- a/src/modules/more/more.css
+++ b/src/modules/more/more.css
@@ -102,11 +102,12 @@
 .info-panel__close {
   width: 36px;
   height: 36px;
-  border-radius: 50%;
-  display: grid;
-  place-items: center;
-  border: 1px solid var(--color-border);
-  background: var(--color-surface);
+  display: inline-flex;
+  align-items: center;
+  justify-content: center;
+  padding: 0;
+  border: none;
+  background: transparent;
 }
 
 .info-panel__eyebrow {
@@ -119,8 +120,6 @@
 
 .info-panel__headline {
   margin: 0;
-  font-size: var(--font-size-2xl);
-  font-weight: var(--font-weight-semibold);
   color: var(--color-text-primary);
 }
 
